--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="section-hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="H">Hi, I am Talha</h1>
+                    <h1 class="H">Hi, I am Talha Qureshi</h1>
                     <hr class="hr">
                     <p>Welcome to my corner of the web! I'm Talha, a passionate and creative
                         <br>    
@@ -41,7 +41,7 @@
                     <img src="img.jpg" alt="">
                 </div>
                 <div class="hero-content">
-                    <h1 class="H heading-primary">Hi, I am Talha</h1>
+                    <h1 class="H heading-primary">Hi, I am Talha Qureshi</h1>
                     <hr>
                     <p class="para">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi aspernatur tenetur eius reprehenderit voluptates placeat dolores nisi? Rem veniam, accusantium voluptatum fugit, rerum cum, numquam nam enim excepturi aperiam at.
@@ -175,5 +175,6 @@
     <!-- ion-icon CDN -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<h1 class="change">Made By Talha Kamran</h1>
 </body>
 </html>
